# ISC-4221-DiscreteMethods-Dashboards

./: .gitignore  README.md  README_Algorithms.md  README_Graphs.md  pyproject.toml
.specstory/history/: 2025-08-22_19-24Z-update-readme-structure-for-dashboards.md  2025-08-22_19-32Z-migrate-interactive-algorithms-to-dash.md
02_ProbabilityMonteCarlo/: Probability and MCMC.md  README.md  README_Dash_Migration.md  dashboard_1_probability_building_blocks.py  dashboard_4_monte_carlo_pi.py  dashboard_6_brownian_motion.py  dashboard_7_secretary_problem.py  dashboard_summary_table.md  requirements.txt  run_dashboards.py
02_ProbabilityMonteCarlo/.specstory/history/: 2025-08-18_21-20Z-designing-interactive-dashboards-for-discrete-algorithms.md
03_Graphs/: Graph Algorithms Tutorial Generation.md
04_ImageProcessing/: Image Processing.md
Algorithms/: Discrete Algorithms Tutorial Generation.md  README_Dash_Migration.md  interactive_algorithms_dashboards.py  interactive_algorithms_dashboards_dash.py
DataMining/: Data Mining Gemini.md
During_Class_Examples/PythonOverview/: README.md  classclass.py  main.py  testfunctions.py
Graphs/: dashboard_summary.md  interactive_graph_dashboards.py  run_dashboard.py
Graphs/.specstory/history/: 2025-08-18_20-47Z-unable-to-select-venv-environment.md  (+4 more)
ProbabilityMonteCarlo/: dashboard_1_probability_building_blocks.py  dashboard_4_monte_carlo_pi.py  dashboard_6_brownian_motion.py  dashboard_7_secretary_problem.py  requirements.txt
discrete_algorithms_2025.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
