[project]
name = "discrete-algorithms-2025"
version = "1.0.0"
description = "Interactive Algorithms Dashboards for Discrete Algorithms Education"
authors = [
    {name = "Educational Dashboard Creator", email = "creator@example.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "streamlit>=1.28.0",
    "networkx>=3.0",
    "plotly>=5.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "dash>=2.16.0",
    "dash-bootstrap-components>=1.5.0",
]

# This is a script collection, not a buildable package
# [build-system]
# requires = ["setuptools>=61.0", "wheel"]
# build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# exclude = ["tests*", "docs*"]

# No wheel building needed for script collection
# [tool.hatch.build.targets.wheel]
# packages = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.0.0",
]

# This is a script collection, not a buildable package
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
